jvector-native/src/main/c/jvector_simd.h

/* PQ kernels */
JVECTOR_SIMD_API float assemble_and_sum_f32(const float* data, int dataBase, const unsigned char* baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength);
/* Element-wise in-place vector arithmetic */
JVECTOR_SIMD_API void    add_in_place_f32(float* v1, const float* v2, size_t length);
JVECTOR_SIMD_API void    add_scalar_in_place_f32(float* v1, float value, size_t length);
JVECTOR_SIMD_API void    sub_in_place_f32(float* v1, const float* v2, size_t length);
JVECTOR_SIMD_API void    sub_scalar_in_place_f32(float* v1, float value, size_t length);
JVECTOR_SIMD_API float   max_f32(const float* v, size_t length);
JVECTOR_SIMD_API void    min_in_place_f32(float* v1, const float* v2, size_t length);