jvector-native/src/main/java/io/github/jbellis/jvector/vector/cnative/NativeSimdOps.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void add_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static MethodHandle add_in_place_f32$handle() {
        return add_in_place_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void add_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static MemorySegment add_in_place_f32$address() {
        return add_in_place_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void add_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static void add_in_place_f32(MemorySegment v1, MemorySegment v2, long length) {
        var mh$ = add_in_place_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("add_in_place_f32", v1, v2, length);
            }
            mh$.invokeExact(v1, v2, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class add_scalar_in_place_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("add_scalar_in_place_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void add_scalar_in_place_f32(float *v1, float value, size_t length)
     * }
     */
    public static FunctionDescriptor add_scalar_in_place_f32$descriptor() {
        return add_scalar_in_place_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void add_scalar_in_place_f32(float *v1, float value, size_t length)
     * }
     */
    public static MethodHandle add_scalar_in_place_f32$handle() {
        return add_scalar_in_place_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void add_scalar_in_place_f32(float *v1, float value, size_t length)
     * }
     */
    public static MemorySegment add_scalar_in_place_f32$address() {
        return add_scalar_in_place_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void add_scalar_in_place_f32(float *v1, float value, size_t length)
     * }
     */
    public static void add_scalar_in_place_f32(MemorySegment v1, float value, long length) {
        var mh$ = add_scalar_in_place_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("add_scalar_in_place_f32", v1, value, length);
            }
            mh$.invokeExact(v1, value, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sub_in_place_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("sub_in_place_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void sub_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static FunctionDescriptor sub_in_place_f32$descriptor() {
        return sub_in_place_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void sub_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static MethodHandle sub_in_place_f32$handle() {
        return sub_in_place_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void sub_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static MemorySegment sub_in_place_f32$address() {
        return sub_in_place_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void sub_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static void sub_in_place_f32(MemorySegment v1, MemorySegment v2, long length) {
        var mh$ = sub_in_place_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sub_in_place_f32", v1, v2, length);
            }
            mh$.invokeExact(v1, v2, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sub_scalar_in_place_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("sub_scalar_in_place_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void sub_scalar_in_place_f32(float *v1, float value, size_t length)
     * }
     */
    public static FunctionDescriptor sub_scalar_in_place_f32$descriptor() {
        return sub_scalar_in_place_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void sub_scalar_in_place_f32(float *v1, float value, size_t length)
     * }
     */
    public static MethodHandle sub_scalar_in_place_f32$handle() {
        return sub_scalar_in_place_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void sub_scalar_in_place_f32(float *v1, float value, size_t length)
     * }
     */
    public static MemorySegment sub_scalar_in_place_f32$address() {
        return sub_scalar_in_place_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void sub_scalar_in_place_f32(float *v1, float value, size_t length)
     * }
     */
    public static void sub_scalar_in_place_f32(MemorySegment v1, float value, long length) {
        var mh$ = sub_scalar_in_place_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sub_scalar_in_place_f32", v1, value, length);
            }
            mh$.invokeExact(v1, value, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class max_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("max_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float max_f32(const float *v, size_t length)
     * }
     */
    public static FunctionDescriptor max_f32$descriptor() {
        return max_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float max_f32(const float *v, size_t length)
     * }
     */
    public static MethodHandle max_f32$handle() {
        return max_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float max_f32(const float *v, size_t length)
     * }
     */
    public static MemorySegment max_f32$address() {
        return max_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float max_f32(const float *v, size_t length)
     * }
     */
    public static float max_f32(MemorySegment v, long length) {
        var mh$ = max_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("max_f32", v, length);
            }
            return (float)mh$.invokeExact(v, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class min_in_place_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("min_in_place_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void min_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static FunctionDescriptor min_in_place_f32$descriptor() {
        return min_in_place_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void min_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static MethodHandle min_in_place_f32$handle() {
        return min_in_place_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void min_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static MemorySegment min_in_place_f32$address() {
        return min_in_place_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void min_in_place_f32(float *v1, const float *v2, size_t length)
     * }
     */
    public static void min_in_place_f32(MemorySegment v1, MemorySegment v2, long length) {
        var mh$ = min_in_place_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("min_in_place_f32", v1, v2, length);
            }
            mh$.invokeExact(v1, v2, length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class assemble_and_sum_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("assemble_and_sum_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float assemble_and_sum_f32(const float *data, int dataBase, const unsigned char *baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength)
     * }
     */
    public static FunctionDescriptor assemble_and_sum_f32$descriptor() {
        return assemble_and_sum_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float assemble_and_sum_f32(const float *data, int dataBase, const unsigned char *baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength)
     * }
     */
    public static MethodHandle assemble_and_sum_f32$handle() {
        return assemble_and_sum_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float assemble_and_sum_f32(const float *data, int dataBase, const unsigned char *baseOffsets, int baseOffsetsOffset, size_t baseOffsetsLength)
     * }
     */
    public static MemorySegment assemble_and_sum_f32$address() {
        return assemble_and_sum_f32.ADDR;
    }
